# libjpeg_windows

./: README.md
BitmapCompress-master/: build.gradle
BitmapCompress-master/app/: CMakeLists.txt  build.gradle
BitmapCompress-master/app/libs/jpeg/: jmorecfg.h  jpeglib.h
BitmapCompress-master/app/src/main/cpp/: native-lib.cpp
BitmapCompress-master/app/src/main/java/com/handsome/bitmapcompress/: CompressUtils.java  ImageUtils.java  MainActivity.java
BitmapCompress-master/app/src/main/res/layout/: activity_main.xml
libjpeg_demo/: libjpeg_demo.sln
libjpeg_demo/libjpeg_demo/: ReadMe.txt  libjpeg_demo.cpp  libjpeg_demo.vcxproj  libjpeg_demo.vcxproj.filters  stdafx.cpp
